fix: application start issue and minor modification
